--- a/appveyor.yml
+++ b/appveyor.yml
@@ -1,9 +1,9 @@
 build: false
 
 environment:
-    PYTHON: "C:\\Python27-x64"
+    PYTHON: "C:\\Python27"
     PYTHON_VERSION: "2.7.11"
-    PYTHON_ARCH: "64"
+    PYTHON_ARCH: "32"
 
     CONAN_UPLOAD: 1
     CONAN_REFERENCE: "libssh2/1.8.0"
@@ -17,10 +17,13 @@ environment:
         - CONAN_CURRENT_PAGE: 3
         - CONAN_CURRENT_PAGE: 4
 
+init:
+    - "ECHO %PYTHON% %PYTHON_VERSION% %PYTHON_ARCH%"
+
 install:
-  - set PATH=%PATH%;%PYTHON%/Scripts/
-  - pip.exe install conan_package_tools # This installs conan too
-  - conan user # This creates the conan data directory
+    - set PATH=%PATH%;%PYTHON%/Scripts/
+    - pip.exe install conan_package_tools # This installs conan too
+    - conan user # This creates the conan data directory
 
 test_script:
-  - C:\Python27-x64\python build.py
+    - python build.py
