Build shared by default and change package username

--- a/test_package/CMakeLists.txt
+++ b/test_package/CMakeLists.txt
@@ -1,9 +1,8 @@
-project(testproj)
+PROJECT(MyHello)
 cmake_minimum_required(VERSION 3.0)
 
 include(${CMAKE_BINARY_DIR}/conanbuildinfo.cmake)
-conan_basic_setup()
+CONAN_BASIC_SETUP()
 
-add_executable(testproj test.c)
-
-target_link_libraries(testproj ${CONAN_LIBS})
+ADD_EXECUTABLE(mytest test.c)
+TARGET_LINK_LIBRARIES(mytest ${CONAN_LIBS})
