--- a/appveyor.yml
+++ b/appveyor.yml
@@ -7,7 +7,7 @@ environment:
 
     CONAN_UPLOAD: 1
     CONAN_REFERENCE: "libssh2/1.8.0"
-    CONAN_USERNAME: "Wi3ard"
+    CONAN_USERNAME: "eliaskousk"
     CONAN_CHANNEL: "stable"
     CONAN_TOTAL_PAGES: 4
 
