--- a/appveyor.yml
+++ b/appveyor.yml
@@ -2,28 +2,23 @@ build: false
 
 environment:
     PYTHON: "C:\\Python27"
-    PYTHON_VERSION: "2.7.11"
+    PYTHON_VERSION: "2.7.8"
     PYTHON_ARCH: "32"
 
-    CONAN_UPLOAD: 1
-    CONAN_REFERENCE: "libssh2/1.8.0"
-    CONAN_USERNAME: "theirix"
-    CONAN_CHANNEL: "stable"
-    CONAN_TOTAL_PAGES: 4
-
     matrix:
-        - CONAN_CURRENT_PAGE: 1
-        - CONAN_CURRENT_PAGE: 2
-        - CONAN_CURRENT_PAGE: 3
-        - CONAN_CURRENT_PAGE: 4
-
-init:
-    - "ECHO %PYTHON% %PYTHON_VERSION% %PYTHON_ARCH%"
-
+        - APPVEYOR_BUILD_WORKER_IMAGE: Visual Studio 2015
+          CONAN_VISUAL_VERSIONS: 12
+        - APPVEYOR_BUILD_WORKER_IMAGE: Visual Studio 2015
+          CONAN_VISUAL_VERSIONS: 14
+        - APPVEYOR_BUILD_WORKER_IMAGE: Visual Studio 2017
+          CONAN_VISUAL_VERSIONS: 15
+  
 install:
-    - set PATH=%PATH%;%PYTHON%/Scripts/
-    - pip.exe install conan_package_tools # This installs conan too
-    - conan user # This creates the conan data directory
-
+  - set PATH=%PATH%;%PYTHON%/Scripts/
+  - pip.exe install conan --upgrade
+  - pip.exe install conan_package_tools
+  - conan user # It creates the conan data directory
+  
 test_script:
-    - python build.py
+  - python build.py
+ 
